# robot-control-server-rs

./: .dockerignore  .env.example  .mise.toml  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/workflows/: docker-publish.yml  rust-ci.yml  rust-release.yml
calibration/: follower.json  leader.json
src/: config.rs  error.rs  lib.rs  state.rs
src/api/: camera_ws.rs  cameras.rs  health.rs  mod.rs  robot_ws.rs  robots.rs
src/cameras/: camera_worker.rs  commands.rs  mod.rs  types.rs
src/cli/: display.rs
src/robots/: calibration.rs  client.rs  commands.rs  feetech.rs  mod.rs  serial.rs  worker.rs
